--- a/onsite.html
+++ b/onsite.html
@@ -123,7 +123,26 @@
 		['number of difficult words', 103,200.8319474,311.0396877,359.4857778]
 		];
 		
+		var client = new XMLHttpRequest();
+		client.open('GET', '/json/test.txt');
+		client.onreadystatechange = function() {
+		  //alert(client.responseText);
+		}
+		client.send();
 
+		// var bDataSet = $.getJSON( "json/test.json", function( data ) {
+		//   var items = [];
+		//   $.each( data, function( key, val ) {
+		//     items.push( "<li id='" + key + "'>" + val + "</li>" );
+		//   });
+		//  
+		//   $( "<ul/>", {
+		//     "class": "my-new-list",
+		//     html: items.join( "" )
+		//   }).appendTo( "body" );
+		// });
+		
+		var bDataSet = client.responseXML;
 
 	$(document).ready(function() {
 		$('#dynamicA').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example"></table>' );
@@ -168,7 +187,24 @@
 	    } );
 	} );
 	
-	
+	$(document).ready(function() {
+		$('#dynamic2').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example2"></table>' );
+		$('#example2').dataTable( {
+			"aaData": bDataSet,
+			"aoColumns": [
+			{ "sTitle": "html url"},
+			{ "sTitle": "Number of images in body" , "sClass": "center"},
+			{ "sTitle": "Proximity of title tag words to external bound hyperlinks" , "sClass": "center"},
+			{ "sTitle": "Number of scripts" , "sClass": "center"},
+			{ "sTitle": "Number of hyperlinks" , "sClass": "center"},
+			{ "sTitle": "Title character length" , "sClass": "center"},
+			{ "sTitle": "Number of external CSS styles" , "sClass": "center"},
+			{ "sTitle": "Number of titles same as h1" , "sClass": "center"},
+			{ "sTitle": "Title total number of syllables" , "sClass": "center"},
+			{ "sTitle": "Anchor number of unique words" , "sClass": "center"},
+			{ "sTitle": "Total number of dictionary words" , "sClass": "center"}
+			]
+		} );
 				
 	} );
 	</script>
@@ -324,7 +360,7 @@
 		  
 		  <h2>Influential Feature Delta to Winning Mean</h2>
 		  <p>From JSON on local disk</p>
-		  <div id="dynamicJSONp">	  
+		  <div id="dynamic2">	  
 		  </div>
 
 		  <hr>
