onsite page update

--- a/onsite.html
+++ b/onsite.html
@@ -159,25 +159,25 @@
 				
 	} );
 	
-	$(document).ready(function() {
-	    var oTable = $('#exampleJSONp').dataTable( {
-	        "bProcessing": true,
-	        "sAjaxSource": "/json/test_format.txt",
-	        "aoColumns": [
-			{ "mData": "html url"},
-			{ "mData": "Number of images in body"},
-			{ "mData": "Proximity of title tag words to external bound hyperlinks"},
-			{ "mData": "Number of scripts"},
-			{ "mData": "Number of hyperlinks"},
-			{ "mData": "Title character length"},
-			{ "mData": "Number of external CSS styles"},
-			{ "mData": "Number of titles same as h1"},
-			{ "mData": "Title total number of syllables"},
-			{ "mData": "Anchor number of unique words"},
-			{ "mData": "Total number of dictionary words"}
-	        ]
-	    } );
-	} );
+	// $(document).ready(function() {
+	//     var oTable = $('#exampleJSONp').dataTable( {
+	//         "bProcessing": true,
+	//         "sAjaxSource": "/json/test_format.txt",
+	//         "aoColumns": [
+	// 		{ "mData": "html url"},
+	// 		{ "mData": "Number of images in body"},
+	// 		{ "mData": "Proximity of title tag words to external bound hyperlinks"},
+	// 		{ "mData": "Number of scripts"},
+	// 		{ "mData": "Number of hyperlinks"},
+	// 		{ "mData": "Title character length"},
+	// 		{ "mData": "Number of external CSS styles"},
+	// 		{ "mData": "Number of titles same as h1"},
+	// 		{ "mData": "Title total number of syllables"},
+	// 		{ "mData": "Anchor number of unique words"},
+	// 		{ "mData": "Total number of dictionary words"}
+	//         ]
+	//     } );
+	// } );
 	
 	$(document).ready(function() {
 	    $('#example3').dataTable( {
