--- a/onsite.html
+++ b/onsite.html
@@ -357,7 +357,6 @@
 	  </div>
 	  <div class="row-fluid pitch">
 
-		  
 		  <!-- <h2>Influential Feature Delta to Winning Mean</h2>
 		  <p>From JSON on local disk</p>
 		  <div id="dynamic2">	  
@@ -371,7 +370,7 @@
 		  <hr> -->
 		  
 		  <h2>Influential Feature Delta to Winning Mean</h2>
-		  <p>From custom text data file</p>
+		  <p>For top 10 features on aggregate</p>
 		  <div id="dynamic">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example3">
 				  <thead>
