changed StatSEO to show barchart

--- a/jobs.html
+++ b/jobs.html
@@ -40,11 +40,11 @@
     			<a class="brand" href="/">MathSight</a>
     			<div class="nav-collapse collapse">
     				<ul class="nav">
-		                <li class="active"><a href="/">Home</a></li>
+		                <li><a href="/">Home</a></li>
 		                <li><a href="/plans.html">Plans</a></li>
 		                <li><a href="/tour.html">Tour</a></li>
 						<li><a href="/api.html">API</a></li>
-						<li><a href="/jobs.html">Jobs</a></li>
+						<li class="active"><a href="/jobs.html">Jobs</a></li>
     				</ul>
     			</div>
     			<!--/.nav-collapse -->
