adjusting StatSEO page to show barchart

--- a/demo.html
+++ b/demo.html
@@ -298,13 +298,13 @@
 
 		  <div class="span6 offset1 asset">
 
-			  <!-- <div class='clickableRow' href="/onsite.html" id="chartBar1" style="height:300px; width:500px;"></div>
+			  <div class='clickableRow' href="/onsite.html" id="chart2" style="height:300px; width:500px;"></div>
 			  <div class="code prettyprint">
 				  <pre class="code prettyprint brush: js"></pre>
-			  </div> -->
+			  </div>
 			  
-			  <div class='clickableRow' href="/onsite.html" id="chartBar1" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
-			  <pre class="code brush:js"></pre>
+			  <!-- <div class='clickableRow' href="/onsite.html" id="chartBar1" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
+			  <pre class="code brush:js"></pre> -->
 
 		  </div>
 	 
