adjusting StatSEO page to show barchart

--- a/demo.html
+++ b/demo.html
@@ -147,7 +147,7 @@
 	
 	</script>
 
-	// <script class="code" type="text/javascript">
+ <script class="code" type="text/javascript">
 // 	$(document).ready(function(){
 // 		var s1 = [758, 3742];
 // 		var ticks = ['Healthy URLs', 'At risk URLs'];
@@ -179,7 +179,7 @@
 // });
 // 
 // 		
-// </script>
+ </script>
 	
 	<script class="code" type="text/javascript">
 	$(document).ready(function(){
