adjusting StatSEO page to show barchart

--- a/demo.html
+++ b/demo.html
@@ -122,62 +122,30 @@
 	
 	<script class="code" type="text/javascript">
 	$(document).ready(function(){
-		var data = [
-		['Good urls', 758],['Bad urls', 3742]
-		];
-		var plot1 = jQuery.jqplot ('chart1', [data], 
-		{ 
-			seriesDefaults: {
-				// Make this a pie chart.
-				renderer: jQuery.jqplot.PieRenderer, 
-				rendererOptions: {
-					// Put data labels on the pie slices.
-					// By default, labels show the percentage of the slice.
-					showDataLabels: true
-				}
-			}, 
-			legend: { show:true, location: 'e' }
-		}
-	);
-
+	  var data = [
+	    ['Good urls', 758],['Bad urls', 3742]
+	  ];
+	  var plot1 = jQuery.jqplot ('chart1', [data], 
+	    { 
+	      seriesDefaults: {
+	        // Make this a pie chart.
+	        renderer: jQuery.jqplot.PieRenderer, 
+	        rendererOptions: {
+	          // Put data labels on the pie slices.
+	          // By default, labels show the percentage of the slice.
+	          showDataLabels: true
+	        }
+	      }, 
+	      legend: { show:true, location: 'e' }
+	    }
+	  );
+	});
 	$('#chart1').bind('jqplotDataClick', function(ev, seriesIndex, pointIndex, data) {
 		alert(plot.series[seriesIndex].seriesColors[pointIndex]);
 	});
-	
-	
 
-// 	$(document).ready(function(){
-// 		var s1 = [758, 3742];
-// 		var ticks = ['Healthy URLs', 'At risk URLs'];
-//          
-// 		plot2 = $.jqplot('chartBar1', [s1, s2], {
-// 			seriesDefaults: {
-// 				renderer:$.jqplot.BarRenderer,
-// 				pointLabels: { show: true }
-// 			},
-// 			axes: {
-// 				xaxis: {
-// 					renderer: $.jqplot.CategoryAxisRenderer,
-// 					ticks: ticks
-// 				}
-// 			}
-// 		});
-//      
-// 		$('#chartBar1').bind('jqplotDataHighlight', 
-// 		function (ev, seriesIndex, pointIndex, data) {
-// 			$('#infoBar1').html('series: '+seriesIndex+', point: '+pointIndex+', data: '+data);
-// 		}
-// 	);
-//              
-// 	$('#chartBar1').bind('jqplotDataUnhighlight', 
-// 	function (ev) {
-// 		$('#infoBar1').html('Nothing');
-// 	}
-// );
-// });
-// 
-// 		
- </script>
+		
+	</script>
 	
 	<script class="code" type="text/javascript">
 	$(document).ready(function(){
@@ -299,13 +267,12 @@
 
 		  <div class="span6 offset1 asset">
 
+
+			  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
 			  <div class='clickableRow' href="/onsite.html" id="chart1" style="height:300px; width:500px;"></div>
 			  <div class="code prettyprint">
 				  <pre class="code prettyprint brush: js"></pre>
 			  </div>
-			  
-			  <!-- <div class='clickableRow' href="/onsite.html" id="chartBar1" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
-			  <pre class="code brush:js"></pre> -->
 
 		  </div>
 	 
