adjusting StatSEO page to show barchart

--- a/demo.html
+++ b/demo.html
@@ -170,6 +170,32 @@
 	});
 	</script>
 	
+	<script class="code" type="text/javascript">$(document).ready(function(){
+	        plot5 = $.jqplot('chart5', [[[2,1], [null,2], [7,3], [10,4]]], {
+	            captureRightClick: true,
+	            seriesDefaults:{
+	                renderer:$.jqplot.BarRenderer,
+	                shadowAngle: 135,
+	                rendererOptions: {
+	                    barDirection: 'horizontal',
+	                    highlightMouseDown: true    
+	                },
+	                pointLabels: {show: true, formatString: '%d'}
+	            },
+	            legend: {
+	                show: true,
+	                location: 'e',
+	                placement: 'outside'
+	            },
+	            axes: {
+	                yaxis: {
+	                    renderer: $.jqplot.CategoryAxisRenderer
+	                }
+	            }
+	        });
+	    });</script>
+	
+	
   </head>
   <body>
 
