adjusting StatSEO page to show barchart

--- a/demo.html
+++ b/demo.html
@@ -295,10 +295,14 @@
 
 
 			  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
-			  <div class='clickableRow' href="/onsite.html" id="chart1" style="height:300px; width:500px;"></div>
+			  <!-- <div class='clickableRow' href="/onsite.html" id="chart1" style="height:300px; width:500px;"></div>
 			  <div class="code prettyprint">
 				  <pre class="code prettyprint brush: js"></pre>
-			  </div>
+			  </div> -->
+			  
+			  <div id="chart5" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
+			  <pre class="code brush:js"></pre>
+			  
 
 		  </div>
 	 
