--- a/demo.html
+++ b/demo.html
@@ -120,12 +120,8 @@
 	</script>
 	
 	
-	
-	
-	
-	
 	<script class="code" type="text/javascript">$(document).ready(function(){
-		plot5 = jQuery.jqplot('chart5', [[[2,1], [null,2], [7,3], [10,4]]], {
+		plot5 = jQuery.jqplot('chart5', [[['Healthy urls', 758],['At risk urls', 3742]]], {
 			captureRightClick: true,
 			seriesDefaults:{
 				renderer:jQuery.jqplot.BarRenderer,
@@ -248,13 +244,13 @@
   			      <tbody>
   			          <tr class='clickableRow' href="/onsite.html">
   			              <td>1</td>
-  			              <td>Good</td>
+  			              <td>Healthy</td>
   			              <td>758</td>
   			              <td>17%</td>
   			          </tr>
   			          <tr class='clickableRow' href="/onsite.html">
   			              <td>2</td>
-  			              <td>Bad</td>
+  			              <td>At risk</td>
   			              <td>3742</td>
   			              <td>83%</td>
   			          </tr>
