--- a/demo.html
+++ b/demo.html
@@ -19,6 +19,7 @@
 	<script src="dist/plugins/jqplot.pointLabels.min.js"></script>
 	
 	<script src="datatables/media/js/jquery.dataTables.js"></script>
+	<script src="datatables/media/js/jquery.js"></script>
 
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
