--- a/demo.html
+++ b/demo.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
 	
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="dist/jquery.jqplot.min.js"></script>
 	<script src="dist/plugins/jqplot.pieRenderer.min.js"></script>
 	<script src="dist/plugins/jqplot.barRenderer.min.js"></script>
 	<script src="dist/plugins/jqplot.categoryAxisRenderer.min.js"></script>
 	<script src="dist/plugins/jqplot.pointLabels.min.js"></script>
-	
+
 	<script src="datatables/media/js/jquery.dataTables.js"></script>
-	<script src="datatables/media/js/jquery.js"></script>
 
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
