--- a/demo.html
+++ b/demo.html
@@ -247,7 +247,7 @@
 		  <p></p>
 	  </div>
 	  <!-- <p>
-	  <a href="/onsite.html">Click for onsite influential feature summary</a>
+	  <a href="/onsite_SQ_drilldown.html">Click for onsite influential feature summary</a>
 	  </p> -->
 	  
 	  <div class="row-fluid">
@@ -257,7 +257,7 @@
  
   			  <table class="table table-striped table-bordered table-condensed">
   			      <thead>
-  			          <tr class='clickableRow' href="/onsite.html">
+  			          <tr class='clickableRow' href="/onsite_SQ_drilldown.html">
   			              <th>#</th>
   			              <th>Onsite URL state</th>
   			              <th>Number of URLs</th>
@@ -265,19 +265,19 @@
   			          </tr>
   			      </thead>
   			      <tbody>
-  			          <tr class='clickableRow' href="/onsite.html">
+  			          <tr class='clickableRow' href="/onsite_SQ_drilldown.html">
   			              <td>1</td>
   			              <td>Healthy</td>
   			              <td>758</td>
   			              <td>17%</td>
   			          </tr>
-  			          <tr class='clickableRow' href="/onsite.html">
+  			          <tr class='clickableRow' href="/onsite_SQ_drilldown.html">
   			              <td>2</td>
   			              <td>At risk</td>
   			              <td>3742</td>
   			              <td>83%</td>
   			          </tr>
-  			          <tr class='clickableRow' href="/onsite.html">
+  			          <tr class='clickableRow' href="/onsite_SQ_drilldown.html">
   			              <td>TOTAL</td>
   			              <td></td>
   			              <td>4500</td>
@@ -292,12 +292,12 @@
 
 
 			  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
-			  <!-- <div class='clickableRow' href="/onsite.html" id="chart1" style="height:300px; width:500px;"></div>
+			  <!-- <div class='clickableRow' href="/onsite_SQ_drilldown.html" id="chart1" style="height:300px; width:500px;"></div>
 			  <div class="code prettyprint">
 				  <pre class="code prettyprint brush: js"></pre>
 			  </div> -->
 			  
-			  <div class='clickableRow' href="/onsite.html" id="chart5" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
+			  <div class='clickableRow' href="/onsite_SQ_drilldown.html" id="chart5" style="margin-top:20px; margin-left:20px; width:300px; height:300px;"></div>
 			  <pre class="code brush:js"></pre>
 			  
 
