adjusting onsite drilldown page

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -382,12 +382,12 @@ rel="stylesheet" type="text/css">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example1">
 				  <thead>
 					<tr>
-						<th rowspan="2" width="80%">Page URL</th>
-						<th colspan="2" width="20%">Feature data</th>  
+						<th rowspan="2">Page URL</th>
+						<th colspan="2">Feature data</th>  
 					</tr>
 					<tr>
-						<th width="10%">Value</th>
-						<th width="10%">Delta</th>
+						<th>Value</th>
+						<th>Delta</th>
 					</tr>
 				  </thead>
 				  <tbody>
