--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -382,8 +382,8 @@ rel="stylesheet" type="text/css">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example1">
 				  <thead>
 					<tr>
-						<th rowspan="2">Page URL</th>
-						<th colspan="2">Feature data</th>  
+						<th width="80%" rowspan="2">Page URL</th>
+						<th width="20%" colspan="2">Feature data</th>  
 					</tr>
 					<tr>
 						<th>Value</th>
