adjusting onsite drilldown page

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -386,8 +386,8 @@ rel="stylesheet" type="text/css">
 						<th width="20%" colspan="2">Feature data</th>  
 					</tr>
 					<tr>
-						<th>Value</th>
-						<th>Delta</th>
+						<th width="10%">Value</th>
+						<th width="10%">Delta</th>
 					</tr>
 				  </thead>
 				  <tbody>
