adjusting onsite drilldown page

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -134,7 +134,7 @@
 			{ "sTitle": "Winning Mean" , "sClass": "center"},
 			{ "sTitle": "Mean Value (this domain)", "sClass": "center" },
 			],
-			"aaSorting": [[ 2, "asc" ]]
+			"aaSorting": [[ 2, "desc" ]]
 		} );
 
 
