--- a/demo.html
+++ b/demo.html
@@ -131,7 +131,14 @@
 	    $('#example3').dataTable( {
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/onsite_summary.json",
-	        "sAjaxDataProp": "onsite"
+	        "sAjaxDataProp": "onsite",
+			"aoColumnDefs": [ {
+			      "aTargets": [ 0 ],
+			      "mData": "download_link",
+			      "mRender": function ( data, type, full ) {
+			        return '<a href="'+data+'">Download</a>';
+			      }
+			    } ]
 	    } );
 	} );
 	
