--- a/onsite.html
+++ b/onsite.html
@@ -133,7 +133,7 @@
 			{ "sTitle": "Influence Rank" , "sClass": "center"},
 			{ "sTitle": "Losing Mean" , "sClass": "center"},
 			{ "sTitle": "Winning Mean" , "sClass": "center"},
-			{ "sTitle": "Mean Value (this domain)", "sClass": "center" },
+			{ "sTitle": "Mean Value (this domain)", "sClass": "center" }
 			]
 		} );
 				
@@ -145,14 +145,7 @@
 	    $('#example3').dataTable( {
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/test_format.txt",
-	        "sAjaxDataProp": "demo",
-			"aoColumnDefs": [ {
-			      "aTargets": [ 0 ],
-			      "mData": "download_link",
-			      "mRender": function ( data, type, full ) {
-			        return '<a href="'+data+'">Download</a>';
-			      }
-			    } ]
+	        "sAjaxDataProp": "demo"
 	    } );
 	} );
 	
