improvements to onsite - issue 6

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -688,7 +688,7 @@ rel="stylesheet" type="text/css">
 		  
 		  <hr>
 		  <p>
-		  <a href="/demo.html">Return to top level summary</a>
+		  <a href="/statseo.html">Return to top level summary</a>
 		  </p>
 		  <div class="spacer"></div>
 		  <hr>
@@ -701,7 +701,7 @@ rel="stylesheet" type="text/css">
 
 		  <hr>
 		  <p>
-		  <a href="/demo.html">Return to top level summary</a>
+		  <a href="/statseo.html">Return to top level summary</a>
 		  </p>
 		  <div class="spacer"></div>
 
