--- a/tour.html
+++ b/tour.html
@@ -61,7 +61,7 @@
     <div class="hero-unit">
 		<h1>StatSEO</h1>
 		<p>See what Google is rewarding and punishing in your domain over the long term</p>
-		<p><a href="/demo.html">See a demo</a></p>
+		<p><a href="/statseo.html">See a demo</a></p>
 	</div>
 	<div class="hero-unit">
 		<h1>LinkStat</h1>
