improvements to onsite - issue 6

--- a/statseo.html
+++ b/statseo.html
@@ -148,9 +148,8 @@
 				renderer:jQuery.jqplot.BarRenderer,
 				shadowAngle: 135,
 				rendererOptions: {
-					
 					highlightMouseDown: true   ,
-					varyBarColor: true 
+					varyBarColor: true ,
 					fillToZero: true
 				},
 				pointLabels: {show: true, formatString: '%d'}
@@ -163,7 +162,7 @@
 			axes: {
 				yaxis: {
 					renderer: jQuery.jqplot.CategoryAxisRenderer,
-					ticks: ticks
+					ticks: ticks,
 	                pad: 1.05,
 	                tickOptions: {formatString: '$%d'}
 	            }
@@ -295,7 +294,7 @@
       
 		  </div> -->
 
-		  <div class="span6 offset1 asset">
+		  <div class="span12 offset1 asset">
 
 
 			  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
