--- a/statseo.html
+++ b/statseo.html
@@ -159,10 +159,13 @@
 			// 	placement: 'outside'
 			// },
 			axes: {
+				  // Use a category axis on the x axis and use our custom ticks.
 				xaxis: {
 					renderer: jQuery.jqplot.CategoryAxisRenderer,
 					ticks: ticks
-				}
+				},
+				// Pad the y axis just a little so bars can get close to, but
+				// not touch, the grid boundaries.  1.2 is the default padding.
 				yaxis: {
 	                pad: 1.05,
 	                tickOptions: {formatString: '$%d'}
