improvements to onsite - issue 6

--- a/statseo.html
+++ b/statseo.html
@@ -143,7 +143,7 @@
 		var ticks = ['Healthy urls', 'At risk urls'];
 		plot5 = jQuery.jqplot('chart5', [s1], {
 			title:'Number of URLs',
-			seriesColors:['#73C774', '#E11D21'],
+			seriesColors:['#00FF00', '#FF0000'],
 			seriesDefaults:{
 				renderer:jQuery.jqplot.BarRenderer,
 				rendererOptions: {
@@ -168,7 +168,7 @@
 				// not touch, the grid boundaries.  1.2 is the default padding.
 				yaxis: {
 	                pad: 1.05,
-	                tickOptions: {formatString: '$%d'}
+	                tickOptions: {formatString: '%d'}
 	            }
 			}
 		});
@@ -298,7 +298,7 @@
       
 		  </div> -->
 
-		  <div class="span12 offset1 asset">
+		  <div class="span6 asset">
 
 
 			  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
