--- a/statseo.html
+++ b/statseo.html
@@ -138,45 +138,40 @@
 	</script>
 	
 	
-	<script class="code" type="text/javascript">$(document).ready(function(){
-		var s1 = [758, -3742];
-		var ticks = ['Healthy urls', 'At risk urls'];
-		plot5 = jQuery.jqplot('chart5', [s1], {
+	<script class="code" type="text/javascript">
+	
+	$(document).ready(function(){
+		line1 = [['Healthy urls', 758],['At risk urls', -3742]];
+		plot5 = jQuery.jqplot('chart5', [line1], {
 			title:'Number of URLs',
 			seriesColors:['#00FF00', '#FF0000'],
 			seriesDefaults:{
 				renderer:jQuery.jqplot.BarRenderer,
 				rendererOptions: {
-					highlightMouseDown: true   ,
-					varyBarColor: true ,
-					fillToZero: true
+					highlightMouseDown: true,
+					varyBarColor: true
 				},
 				pointLabels: {show: true, formatString: '%d'}
 			},
 			// legend: {
-			// 	show: true,
-			// 	location: 'e',
-			// 	placement: 'outside'
-			// },
-			axes: {
-				  // Use a category axis on the x axis and use our custom ticks.
-				xaxis: {
-					renderer: jQuery.jqplot.CategoryAxisRenderer,
-					ticks: ticks
-				},
-				// Pad the y axis just a little so bars can get close to, but
-				// not touch, the grid boundaries.  1.2 is the default padding.
-				yaxis: {
-	                pad: 1.05,
-	                tickOptions: {formatString: '%d'}
-	            }
-			}
+				// 	show: true,
+				// 	location: 'e',
+				// 	placement: 'outside'
+				// },
+				axes: {
+					// Use a category axis on the x axis and use our custom ticks.
+					xaxis: {
+						renderer: jQuery.jqplot.CategoryAxisRenderer
+						// ticks: ticks
+					}
+
+				}
+			});
 		});
-	});
 	
 
 	
-	</script>
+		</script>
 	
 	<script class="code" type="text/javascript">
 	$(document).ready(function(){
