improvements to onsite - issue 6

--- a/statseo.html
+++ b/statseo.html
@@ -144,7 +144,7 @@
 	
 		plot5 = jQuery.jqplot('chart5', [['Healthy urls', 758],['At risk urls', -3742]], {
 			// Only animate if we're not using excanvas (not in IE 7 or IE 8)..
-			animate: !$.jqplot.use_excanvas,
+			// animate: !$.jqplot.use_excanvas,
 			title:'Number of URLs',
 			seriesColors:['#00FF00', '#FF0000'],
 			seriesDefaults:{
