improvements to onsite - issue 6

--- a/statseo.html
+++ b/statseo.html
@@ -142,7 +142,7 @@
 	
 	$(document).ready(function(){
 	
-		plot5 = jQuery.jqplot('chart5', [['Healthy urls', 758],['At risk urls', -3742]], {
+		plot5 = jQuery.jqplot('chart5', [[ 758, 'Healthy urls'],[ -3742, 'At risk urls']], {
 			// Only animate if we're not using excanvas (not in IE 7 or IE 8)..
 			// animate: !$.jqplot.use_excanvas,
 			title:'Number of URLs',
