improvements to onsite - issue 6

--- a/statseo.html
+++ b/statseo.html
@@ -153,8 +153,8 @@
 				rendererOptions: {
 					barDirection: 'horizontal',
 					highlightMouseDown: true,
-					varyBarColor: true
-					// fillToZero: true
+					varyBarColor: true,
+					fillToZero: true
 				},
 				pointLabels: {show: true, formatString: '%d'}
 			},
