improvements to onsite - issue 6

--- a/statseo.html
+++ b/statseo.html
@@ -146,7 +146,7 @@
 			// Only animate if we're not using excanvas (not in IE 7 or IE 8)..
 			animate: !$.jqplot.use_excanvas,
 			title:'Number of URLs',
-			seriesColors:['#00FF00', '#FF0000'],
+			seriesColors:[['#00FF00'], ['#FF0000']],
 			seriesDefaults:{
 				renderer:jQuery.jqplot.BarRenderer,
 				shadowAngle: 135,
