--- a/statseo.html
+++ b/statseo.html
@@ -146,7 +146,11 @@
 			// Only animate if we're not using excanvas (not in IE 7 or IE 8)..
 			animate: !$.jqplot.use_excanvas,
 			title:'Number of URLs',
-			seriesColors:[['#00FF00'], ['#FF0000']],
+			//seriesColors:['#00FF00', '#FF0000'],
+			series: [
+			            {seriesColors: ['#00FF00']}, 
+			            {seriesColors: ['#FF0000']}
+			            ],
 			seriesDefaults:{
 				renderer:jQuery.jqplot.BarRenderer,
 				shadowAngle: 135,
