--- a/statseo.html
+++ b/statseo.html
@@ -141,9 +141,10 @@
 	<script class="code" type="text/javascript">
 	
 	$(document).ready(function(){
-		var s1 = [758, -3742]
-		var ticks = ['Healthy urls', 'At risk urls']
-		plot5 = jQuery.jqplot('chart5', [s1], {
+		var s1 = [758, 'Healthy urls']
+		var s2 = [-3742, 'At risk urls']
+		//var ticks = ['Healthy urls', 'At risk urls']
+		plot5 = jQuery.jqplot('chart5', [[s1],[s2]], {
 			
 			// Only animate if we're not using excanvas (not in IE 7 or IE 8)..
 			animate: !$.jqplot.use_excanvas,
@@ -177,7 +178,7 @@
 					// Use a category axis on the x axis and use our custom ticks.
 					yaxis: {
 						renderer: jQuery.jqplot.CategoryAxisRenderer
-						ticks: ticks
+						//ticks: ticks
 					}
 
 				}
