improvements to onsite - issue 6

--- a/statseo.html
+++ b/statseo.html
@@ -141,8 +141,8 @@
 	<script class="code" type="text/javascript">
 	
 	$(document).ready(function(){
-		var s1 = [758, 'Healthy urls']
-		var s2 = [-3742, 'At risk urls']
+		var s1 = [758, 'Num. urls']
+		var s2 = [-3742, 'Num. urls']
 		//var ticks = ['Healthy urls', 'At risk urls']
 		plot5 = jQuery.jqplot('chart5', [[s1],[s2]], {
 			
