improvements to onsite - issue 6

--- a/statseo.html
+++ b/statseo.html
@@ -149,8 +149,11 @@
 			// Only animate if we're not using excanvas (not in IE 7 or IE 8)..
 			animate: !$.jqplot.use_excanvas,
 			title:'Number of URLs',
-			seriesColors:['#00FF00', '#FF0000'],
-
+			// seriesColors:['#00FF00', '#FF0000'],
+			series:[
+			            {label:'Healthy urls', seriesColors: ['#00FF00']},
+			            {label:'At risk urls', seriesColors: ['#FF0000']}
+			        ],
 			seriesDefaults:{
 				renderer:jQuery.jqplot.BarRenderer,
 				shadowAngle: 135,
@@ -163,10 +166,7 @@
 				// pointLabels: {show: true, formatString: '%d'}
 			},
 			
-			// series:[
-// 			            {label:'Healthy urls', seriesColors: ['#00FF00']},
-// 			            {label:'At risk urls', seriesColors: ['#FF0000']}
-// 			        ],
+
 					
 			legend: {
 					show: true,
