improvements to onsite - issue 6

--- a/statseo.html
+++ b/statseo.html
@@ -160,7 +160,7 @@
 				rendererOptions: {
 					barDirection: 'horizontal',
 					highlightMouseDown: true,
-					varyBarColor: true,
+					//varyBarColor: true,
 					fillToZero: true
 				}
 				// pointLabels: {show: true, formatString: '%d'}
