improvements to onsite - issue 2

--- a/statseo.html
+++ b/statseo.html
@@ -132,9 +132,9 @@
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/onsite_summary.json",
 	        "sAjaxDataProp": "onsite",
-			aoColumns: [{
-			    sType: 'numeric',
-			    fnRender: RenderDecimalNumber,
+			"aoColumns": [{
+			    "sType": 'numeric',
+			    "fnRender": RenderDecimalNumber,
 			    oCustomInfo{"decimalPlaces":2}
 			    }]
 	    } );
@@ -267,7 +267,7 @@
 	  </div>
 	  
 	  <div class="well">
-		  <h2>Onsite pages by StatSEO quotient</h2>
+		  <h2>Onsite pages summary</h2>
 		  <p></p>
 	  </div>
 	  <!-- <p>
