improvements to onsite - issue 2

--- a/statseo.html
+++ b/statseo.html
@@ -132,11 +132,14 @@
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/onsite_summary.json",
 	        "sAjaxDataProp": "onsite",
-			"aoColumns": [{
-			    "sType": 'numeric',
-			    "fnRender": RenderDecimalNumber,
-			    oCustomInfo{"decimalPlaces":2}
-			    }]
+		    "aoColumns": [
+		                   null,
+		                   null,
+		                   null,
+		                   { "sType": "numeric-comma" },
+		                   null,
+						   null
+		               ]
 	    } );
 	} );
 	
