improvements to onsite - issue 2

--- a/barchart.html
+++ b/barchart.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Bar Chart</title>
-		<script src="charts/site/assets/Chart.js"></script>
+		<script src="https://raw.github.com/nnnick/Chart.js/master/site/assets/Chart.js"></script>
 		<meta name = "viewport" content = "initial-scale = 1, user-scalable = no">
 		<style>
 			canvas{
