form input addition

--- a/statseo.html
+++ b/statseo.html
@@ -141,7 +141,7 @@
 		                   null,
 		                   null,
 		                   null,
-		                   { "sType": "numeric-comma" },
+		                   null,
 		                   null,
 						   null
 		               ]
@@ -157,7 +157,7 @@
 		                   null,
 		                   null,
 		                   null,
-		                   { "sType": "numeric-comma" },
+		                   null,
 		                   null,
 						   null
 		               ]
@@ -284,6 +284,11 @@
 	    
       <div class="row-fluid subheading">
 		  <div class="span12">
+			  <form class="navbar-form pull-left">
+			    <input type="text" class="span2">
+			    <button type="submit" class="btn">Submit</button>
+			  </form>
+			  
 			  <!-- Special typography from Bootstrap for lead paragraph. -->
 			  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
 			  <p class="lead">for www.leighmans.com</p>
