form input addition

--- a/statseo.html
+++ b/statseo.html
@@ -284,10 +284,20 @@
 	    
       <div class="row-fluid subheading">
 		  <div class="span12">
-			  <form class="navbar-form pull-left">
-			    <input type="text" class="span2">
-			    <button type="submit" class="btn">Submit</button>
-			  </form>
+		      <div class="form-group">
+		        <label>
+		          Enter your domain URL
+		        </label>
+		        <input type="url" class="form-control" id="inputURL">
+		      </div>
+		      <label class="checkbox">
+		        <input type="checkbox">
+		        Remember me
+		      </label>
+		      <button type="submit" class="btn btn-primary" id="submitYes">
+		        submit!
+		      </button>
+		      <hr>
 			  
 			  <!-- Special typography from Bootstrap for lead paragraph. -->
 			  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
